# gravity-madness

./: .gitignore  CMakeLists.txt  README.md  aggressive-ai-controller.cpp  aggressive-ai-controller.hpp  ai-controller.cpp  ai-controller.hpp  asteroid.cpp  asteroid.hpp  body-collision.cpp  body-collision.hpp  body.cpp  body.hpp  constants.hpp  debug-module.cpp  debug-module.hpp  definitions.hpp  energy-power-up.cpp  energy-power-up.hpp  game-module.cpp  game-module.hpp  gameplay-settings.cpp  gameplay-settings.hpp  graphics-module.cpp  graphics-module.hpp  gravity-madness.hpp  interface.cpp  interface.hpp  loger-manager.cpp  logger-manager.hpp  logger.cpp  logger.hpp  main-menu.cpp  main-menu.hpp  main.cpp  message.cpp  message.hpp  missile.cpp  missile.hpp  particle-system.cpp  (+35 more)
assets/scripts/: graphics.xml  settings.xml  spaceships.xml
config/: config.xml  graphics.xml
controllers/: aggressive-ai-controller.cpp  ai-controller.cpp  ai-controller.hpp  passive-ai-controller.cpp  player-controller-settings.cpp  player-controller-settings.hpp  player-controller.cpp  player-controller.hpp  reasonable-ai-controller.cpp  spaceship-controller.hpp  visualization-controller.cpp  visualization-controller.hpp
docs/common/: 0spaceship.xcf  asteroid-small.xcf  missile-icon.xcf  power-up-high-energy.xcf  power-up-high-gravity.xcf  power-up-high-health.xcf  power-up-low-health.xcf  power-up-more-asteroids.xcf  power-up-random-gravity.xcf  power-up.xcf  spaceship-azrael.xcf  spaceship-azrael0.xcf  spaceship-gogmagog.xcf  spaceship.xcf  thruster.xcf  thruster0.xcf
docs/common/graphics/: arrow.xcf  asteroid-big.xcf  asteroid-medium.xcf  brakes.xcf  icon-application.xcf  missile.xcf  power-up-low-energy.xcf  power-up-low-gravity.xcf  power-up-no-asteroids.xcf  spaceship-azrael.xcf  spaceship-gilgamesh.xcf  spaceship-perun.xcf  spaceship-theseus.xcf
docs/common/installer/windows/: setup-project.iss
docs/common/installer/windows/common/assets/scripts/: audio.xml  settings.xml  spaceships.xml
docs/common/installer/windows/win32/: gravity-madness.exe.manifest
docs/common/installer/windows/win64/: gravity-madness.exe.manifest  link-manifest.cmd
docs/pl/project/: mkdocs.yml
docs/pl/project/docs/: classes.md  controllers.md  gameplay.md  index.md  modules.md  spaceships.md  theory.md
power-ups/: high-energy-power-up.cpp  high-energy-power-up.hpp  high-gravity-power-up.cpp  high-gravity-power-up.hpp  high-health-power-up.cpp  high-health-power-up.hpp  low-energy-power-up.cpp  low-energy-power-up.hpp  low-gravity-power-up.cpp  low-gravity-power-up.hpp  low-health-power-up.cpp  low-health-power-up.hpp  missile-power-up.cpp  missile-power-up.hpp  more-asteroids-power-up.cpp  more-asteroids-power-up.hpp  no-asteroids-power-up.cpp  no-asteroids-power-up.hpp  power-up.cpp  power-up.hpp  random-gravity-power-up.cpp  random-gravity-power-up.hpp
scripts/: audio.xml  graphics.xml  settings.xml  sounds.xml  spaceships.xml
